new analog db for muons

--- a/DAQmxBaseApp/Db/Makefile
+++ b/DAQmxBaseApp/Db/Makefile
@@ -24,8 +24,10 @@ DB += DAQmxBaseI.vdb
 DB += DAQmxBaseO.vdb
 DB += DAQmxBaseScan.vdb
 DB += DAQmxBaseDigOut.vdb
+DB += DAQmxBaseAnOut.db
 DB += DAQmxBaseDigOutLine.vdb
 DB += DAQmxBaseDigIn.vdb
+DB += DAQmxBaseAnIn.db
 DB += DAQmxBaseDigInLine.vdb
 DB += DAQmxBaseDigInDirect.vdb
 DB += DAQmxBaseCnt.vdb
